--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "mic-rn-ui": "0.2.19",
+    "expo-updates": "~0.15.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.11",
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-community/viewpager": "^4.2.1",
+    "react-native-future-module": "^0.1.18",
+    "react-native-screens": "2.17.1",
+    "react-native-svg": "^12.1.0"
   },
   "private": true
 }
